as much as can be done with basic html requests

--- a/404.html
+++ b/404.html
@@ -6,7 +6,10 @@
       </head>
       <body>
         <div id="content">
-            404 Not Found
+          <h1>404 Not Found</h1>
+          <a href="./">Index</a>
+          <a href="./about">About</a>
+          <a href="./contact-me">Contact</a>
         </div>
       </body>
 </html>
