--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
       </head>
       <body>
         <div id="content">
-            About Page
+            <h1>About Page</h1>
+            <a href="./">Index</a>
+            <a href="./contact-me">Contact</a>
+            <p>This project is super simple. It does not even support css files or images because those also send requests to the node server which cannot support them yet.</p>
         </div>
       </body>
 </html>
