--- a/contact-me.html
+++ b/contact-me.html
@@ -6,7 +6,10 @@
       </head>
       <body>
         <div id="content">
-            Contact Page
+          <h1>Contact page</h1>
+          <a href="./">Index</a>
+          <a href="./about">About</a>
+          <p>Check out my <a href="https://github.com/sky-pose-rick/basic-node-webpage">github page.</a></p>
         </div>
       </body>
 </html>
