--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
       </head>
       <body>
         <div id="content">
-            Index Page
+          <h1>Home</h1>
+          <a href="./about">About</a>
+          <a href="./contact-me">Contact</a>
         </div>
       </body>
 </html>
