use express package to display the page instead

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
             <h1>About Page</h1>
             <a href="./">Index</a>
             <a href="./contact-me">Contact</a>
-            <p>This project is super simple. It does not even support css files or images because those also send requests to the node server which cannot support them yet.</p>
+            <p>This project is super simple. Here is one image.</p>
+            <img src="img/cool.png" alt="Missing: A cool image that you really should see" />
         </div>
       </body>
 </html>
